Fix alignment in desktop version of more details

--- a/src/components/stylesheets/MoreDetails.scss
+++ b/src/components/stylesheets/MoreDetails.scss
@@ -44,3 +44,9 @@
     }
   }
 }
+
+@media screen and (min-width: 768px) {
+  .background {
+    justify-content: center;
+  }
+}
